--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,7 +2,7 @@
     font-family: "Inter";
     font-style: normal;
     font-weight: 400;
-    src: url(fonts\inter-400.woff2) format("woff2");
+    src: url("../fonts/inter-400.woff2") format("woff2");
     font-display: swap;
 }
 
@@ -10,7 +10,7 @@
     font-family: "Inter";
     font-style: normal;
     font-weight: 700;
-    src: url(fonts\inter-700.woff2) format("woff2");
+    src: url("../fonts/inter-700.woff2") format("woff2");
     font-display: swap;
 }
 
@@ -18,7 +18,7 @@
     font-family: "Inter";
     font-style: normal;
     font-weight: 900;
-    src: url(fonts\inter-900.woff2) format("woff2");
+    src: url("../fonts/inter-900.woff2") format("woff2");
     font-display: swap;
 }
 
@@ -37,6 +37,7 @@ body {
     font-weight: 700;
     font-size: 16px;
     line-height: 20px;
+    border: none;
 }
 
 .form-button {
@@ -47,6 +48,14 @@ body {
     background-color: #FF2F64;
     border: none;
     font-size: 16px;
+}
+
+.button-accepted {
+    background: rgba(252, 252, 252, 0.3);
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 20px;
+    border: none;
 }
 
 .navigation-link {
@@ -108,13 +117,7 @@ body {
     line-height: 46px;
 }
 
-.catalog-popular-title {
-    font-weight: 900;
-    font-size: 32px;
-    line-height: 46px;
-}
-
-.catalog-item {
+.catalog-item-title {
     font-weight: 700;
     font-size: 20px;
     line-height: 24px;
@@ -123,6 +126,7 @@ body {
 .catalog-description {
     font-weight: 400;
     line-height: 22px;
+    color: #565C66;
 }
 
 .price {
@@ -131,7 +135,7 @@ body {
     line-height: 24px;
 }
 
-.benefits-title{
+.benefits-title {
     font-weight: 900;
     font-size: 32px;
     line-height: 46px;
@@ -163,3 +167,157 @@ body {
     color: #565C66;
 }
 
+.delivery-title {
+    font-weight: 900;
+    font-size: 32px;
+    line-height: 46px;
+}
+
+.delivery-description {
+    font-weight: 400;
+    line-height: 22px;
+    color: #565C66;
+}
+
+.delivery-conformation {
+    font-weight: 400;
+    line-height: 22px;
+    color: #565C66;
+}
+
+.delivery-date {
+    font-weight: 700;
+    line-height: 20px;
+}
+
+.delivery-phone {
+    font-weight: 700;
+    line-height: 20px;
+}
+
+.delivery-address {
+    font-weight: 700;
+    line-height: 20px;
+}
+
+.contact-address-text {
+    font-weight: 400;
+    line-height: 22px;
+    color: #565C66;
+}
+
+.contact-address-text {
+    font-weight: 400;
+    line-height: 22px;
+    color: #565C66;
+}
+
+.schedule {
+    font-weight: 400;
+    line-height: 22px;
+    color: #565C66;
+}
+
+.contact-address {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 24px;
+}
+
+.contact-phone {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 24px;
+}
+
+.cooperation-item {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    color: #2D3440;
+
+}
+
+.cooperation-link {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    color: #2D3440;
+    text-decoration: none;
+}
+
+.cooperation-link-selected {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 20px;
+    color: #2D3440;
+    text-decoration: none;
+}
+
+.copyright-text {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 16px;
+}
+
+.copyright-link {
+    color: #2D3440;
+}
+
+.breadcrumbs-link {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 20px;
+    color: #2D3440;
+    text-decoration: none;
+}
+
+
+.filter-name{
+    font-weight: 900;
+    font-size: 32px;
+    line-height: 46px;
+}
+
+.select-variants {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+}
+
+.range {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+}
+
+.fat-list {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+}
+
+.filler-list {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+}
+
+.range {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+}
+
+.filler-item {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+}
+
+.pagination-link {
+    font-weight: 400;
+    line-height: 20px;
+    color: #2D3440;
+    text-decoration: none;
+}
