--- a/styles/styles.css
+++ b/styles/styles.css
@@ -70,6 +70,19 @@ body {
     border: none;
 }
 
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    border: 0;
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+  }
+
+/*Навигвця*/
+
 .navigation {
     display: flex;
     width: 1170px;
@@ -77,17 +90,25 @@ body {
 }
 
 .navigation-logo {
+    display: flex;
+    align-items: center;
     width: 137px;
     margin-right: 16px;
 }
 
 .navigation-list {
+    display: flex;
+    flex-wrap: wrap;
     width: 400px;
     margin: 0;
     padding: 0;
+    list-style-type: none;
 }
 
 .navigation-link {
+    display: block;
+    padding: 8px 16px;
+    margin-top: 10px;
     color: #2D3440;
     text-decoration: none;
     font-weight: 400;
@@ -96,11 +117,15 @@ body {
 }
 
 .navigation-link-phone {
+    display: block;
     color: #2D3440;
     text-decoration: none;
     font-weight: 700;
     line-height: 20px; 
-    text-align: center; 
+    padding: 8px 16px;
+    margin-top: 8px;
+    text-align: center;
+   
 }
 
 .navigation-user {
@@ -108,22 +133,89 @@ body {
     margin-left: auto;
 }
 
+.navigation-user .navigation-link {
+    min-width: 32px;
+    min-height: 32px;
+}
+
+/*Слайдеры*/
+
 .page-container {
     width: 1170px;
     margin: 0 auto;
+}
+
+.slider {
+    padding-top: 21px;
+    margin-bottom: 80px;
 }
 
 .slider-list {
     display: flex;
     justify-content: space-between;
     margin: 0;
-    padding: 0;
+    padding-top: 0;
+    list-style-type: none;
 }
 
 .slider-item {
     margin: auto;
+    padding-right: 41px;
 }
 
+.slider-item:last-child {
+    padding-right: 0;
+}
+
+.slider-title {
+    font-weight: 900;
+    font-size: 36px;
+    line-height: 46px;
+    display: block;
+    margin-bottom: 24px;
+}
+
+.slider-discription {
+    display: block;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 24px;
+    margin-right: 56px;
+    min-width: 414px;
+    margin-bottom: 48px;
+}
+
+.slider-footer {
+    display: flex;
+    justify-content: space-between;
+}
+
+.slider-pagination-list {
+    display: flex;
+    list-style-type: none;
+    width: 52px;
+    margin: 0;
+    padding: 0;
+}
+
+.slider-pagination-item {
+    margin-right: 8px;
+}
+
+.social-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.social-item {
+    width: 24px;
+    height: 24px;
+    margin-right: 16px;
+}
 
 .social-link {
     color: #2D3440;
@@ -132,28 +224,22 @@ body {
     line-height: 20px;
 }
 
-.slider-title {
-    font-weight: 900;
-    font-size: 36px;
-    line-height: 46px;
-}
 
-.slider-discription {
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 24px;
-}
+/*Подарки за заказ*/
 
 .gifts-presents {
     font-weight: 900;
     font-size: 32px;
     line-height: 46px;
     text-align: center;
+    margin-top: 55px;
 }
 
 .index-colums {
     display: flex;
     justify-content: space-between;
+    margin: 0;
+    padding: 0;
 }
 
 .gifts {
@@ -167,6 +253,7 @@ body {
     background-repeat: no-repeat;
     background-size: 219px 268px;
     background-position: right; 
+    margin-right: 30px;
 }
 
 .marshmellow {
@@ -188,15 +275,31 @@ body {
     line-height: 22px;
 }
 
+/*Популярое в каталоге*/
+
+.catalog-popular {
+    margin-top: 80px;
+}
+
 .catalog-popular-title {
+    display: block;
     font-weight: 900;
     font-size: 32px;
     line-height: 46px;
+    width: 572px;
+    margin: auto;
+    text-align: center;
+    
 }
 
 .catalog-popular-list {
     display: flex;
     justify-content: space-between;
+    margin-top: 54px;
+}
+
+.catalog-item-image {
+    order: -1;
 }
 
 .catalog-item-title {
@@ -217,14 +320,18 @@ body {
     line-height: 24px;
 }
 
+/*Преимущества магазина*/
+
 .benefits {
     background-image: url("../image/ceo.jpg");
     height: 480px;
+    margin-top: 80px;
 }
 
 .benefits-list{
     display: flex;
     justify-content: center;
+    list-style-type: none;
 }
 
 .benefits-title {
@@ -240,9 +347,12 @@ body {
     color: #565C66;
 }
 
+/*Новости и подписка */
+
 .news {
     display: flex;
     justify-content: space-between;
+    margin-top: 80px;
 }
 
 .update {
@@ -251,6 +361,7 @@ body {
     background-size: 570px 224px;
     width: 570px;
     height: 224px;
+    margin-right: 30px;
 }
 
 .update-news {
@@ -279,36 +390,51 @@ body {
     color: #565C66;
 }
 
+/*Доставка*/
+
 .delivery {
     display: flex;
     background-image:url("../image/delivery.jpg");
     height: 534px;
+    margin-top: 80px;
 }
 
-.delivery-container{
+.delivery-container {
     margin: auto;
 }
 
 .delivery-title {
+    display: block;
     font-weight: 900;
     font-size: 32px;
     line-height: 46px;
+    margin-right: 150px;
+    width: 356px;
+    margin-left: 100px;
+    margin-bottom: 24px;
+}
+
+
+.delivery-description {
+    display: block;
+    font-weight: 400;
+    line-height: 22px;
+    color: #565C66;
+    width: 371px;
+    margin-right: 135px;
+    margin-left: 100px;
 }
 
 .delivery-form {
     margin: auto;
 }
-
-.delivery-description {
-    font-weight: 400;
-    line-height: 22px;
-    color: #565C66;
-}
-
 .delivery-conformation {
+    display: block;
     font-weight: 400;
     line-height: 22px;
     color: #565C66;
+    width: 300px;
+    margin-right: 80px;
 }
 
 .delivery-date {
@@ -326,29 +452,26 @@ body {
     line-height: 20px;
 }
 
+/*Контакты*/
+
 .contacts {
     background-image: url("../image/feedback.jpg");
     background-repeat: no-repeat;
     height: 492px;
+    margin-top: 80px;
+    padding-left: 104px;
 }
 
+.contacts-container {
+    width: 343px;
+}
 
 .contact-address-text {
+    padding-top: 104px;
     font-weight: 400;
     line-height: 22px;
     color: #565C66;
-}
-
-.contact-address-text {
-    font-weight: 400;
-    line-height: 22px;
-    color: #565C66;
-}
-
-.schedule {
-    font-weight: 400;
-    line-height: 22px;
-    color: #565C66;
+    width: 179px;
 }
 
 .contact-address {
@@ -357,11 +480,27 @@ body {
     line-height: 24px;
 }
 
+.contact-phone-text {
+    font-weight: 400;
+    line-height: 22px;
+    color: #565C66;
+    width: 267px;
+    margin-bottom: 12px;
+}
+
 .contact-phone {
     font-weight: 700;
     font-size: 20px;
     line-height: 24px;
 }
+
+.schedule {
+    font-weight: 400;
+    line-height: 22px;
+    color: #565C66;
+}
+
+/*Подвал*/
 
 .page-footer-container {
     display: flex;
@@ -370,11 +509,49 @@ body {
     justify-content: space-between;
   }
 
+  .footer-social{
+    margin-top: 48px;
+  }
+
+  .footer-social-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.footer-social-item {
+    width: 24px;
+    height: 24px;
+    margin-right: 16px;
+}
+
+.footer-social-link {
+    color: #2D3440;
+    text-decoration: none;
+    font-weight: 700;
+    line-height: 20px;
+}
+
+.cooperation {
+    margin-top: 48px;
+}
+
+.cooperation-list{
+    display: flex;
+    list-style-type: none;
+    flex-wrap: wrap;
+}
+
 .cooperation-item {
+    display: block;
     font-weight: 400;
     font-size: 14px;
     line-height: 20px;
     color: #2D3440;
+    width: 126px;
 }
 
 .cooperation-link {
@@ -393,6 +570,10 @@ body {
     text-decoration: none;
 }
 
+.copyrights{
+    margin-top: 48px;
+}
+
 .copyright-text {
     font-weight: 400;
     font-size: 12px;
@@ -401,6 +582,21 @@ body {
 
 .copyright-link {
     color: #2D3440;
+}
+
+/*Страница каталога*/
+
+.main-inner{
+    padding-top: 32px;
+}
+
+.breadcrumbs {
+    display: flex;
+    list-style-type: none;
+}
+
+.breadcrumbs-item {
+    padding-right: 24px;
 }
 
 .breadcrumbs-link {
@@ -412,9 +608,20 @@ body {
 }
 
 .filter-name {
+    display: block;
+    margin-top: 16px;
+    margin-bottom: 40px;
     font-weight: 900;
     font-size: 32px;
     line-height: 46px;
+}
+
+.sorting {
+    display: block;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    margin-bottom: 8px;
 }
 
 .select-variants {
@@ -427,25 +634,33 @@ body {
     font-weight: 400;
     font-size: 14px;
     line-height: 20px;
+    margin-right: 24px;
 }
 
 .fat-list {
+    display: flex;
     font-weight: 400;
     font-size: 14px;
     line-height: 20px;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.filter-option {
+    margin-right: 24px;
 }
 
 .filler-list {
+    display: flex;
     font-weight: 400;
     font-size: 14px;
     line-height: 20px;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
 
-.range {
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 20px;
-}
 
 .filler-item {
     font-weight: 400;
@@ -453,21 +668,52 @@ body {
     line-height: 20px;
 }
 
+
+.pagination-container {
+    display: flex;
+    padding: 16px;
+    justify-content: space-around;
+}
+
+.pagination {
+    display: flex;
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+
+.pagination-item {
+    margin-top: 41px;
+    margin-bottom: 41px;
+    padding-right: 15px;
+}
+
 .pagination-link {
     font-weight: 400;
     line-height: 20px;
     color: #2D3440;
     text-decoration: none;
+
+}
+
+.pagination-show-more {
+    margin-top: 41px;
+    margin-bottom: 41px;
 }
 
 .filter {
     display: flex;
     justify-content: space-between;
+    width: 823px;
+    flex-wrap: wrap;
+    margin: 0;
+    padding: 0;
+}
+
+.catalog {
+    margin-top: 44px;
 }
 
 .catalog-list {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    margin: 0; 
+    list-style-type: none;
 }
