--- a/styles/styles.css
+++ b/styles/styles.css
@@ -163,6 +163,10 @@ body {
     outline: none;
 }
 
+.social-link:focus {
+    outline: none;
+}
+
 .social-link:active .social-icon {
     fill: #2D3440;
     opacity: 50%;
@@ -181,9 +185,14 @@ body {
 .footer-social-link:focus .social-icon {
     fill: #2D3440;
     border: 2px solid #2D3440;
-    border-radius: 24px;
+    border-radius: 24px;  
     outline: none;
 }
+
+.footer-social-link:focus {
+    outline: none;
+}
+
 
 .footer-social-link:active .social-icon {
     fill: #2D3440;
@@ -217,6 +226,15 @@ body {
     width: 137px;
     margin-top: 24px;
     margin-right: 34px;
+}
+
+.inner-logo {
+    margin-right: 0px;
+}
+
+.inner-logo-link {
+    margin-right: 16px;
+    margin-left: 7px;
 }
 
 .navigation-link {
@@ -295,6 +313,15 @@ body {
     left: 17px;
     margin: auto 0;
   }
+
+.current-link {
+    background: #FF4A78;
+    color: #FCFCFC;
+    border-radius: 30px;
+    padding-left: 16px;
+    padding-right: 16px;
+}
+
 
 .navigation-link:hover {
     background: rgba(252, 252, 252, 0.5);
@@ -389,18 +416,55 @@ body {
 }
 
 .slider-button {
-    width: 38px;
-    height: 38px;
     background: rgba(252, 252, 252, 0.3);
-    border: 2px solid #FCFCFC;
+    border: 2px solid #fcfcfc;
     border-radius: 50%;
     cursor: pointer;
+    padding: 0;
+    outline: none;
 }
 
 .slider-icon {
     display: block;
     fill: #FCFCFC;
-    padding-left: 8px;
+    padding: 13px 15px 13px 17px;
+}
+
+.slider-button:hover {
+    background: #FCFCFC;
+}
+
+.slider-icon:hover {
+    fill: #2D3440;
+
+}
+
+
+.slider-button:focus {
+    background: rgba(252, 252, 252, 0.3);
+    border: 2px solid #2D3440;
+    outline: none;
+}
+
+.slider-button:focus .slider-icon{
+    fill: #2D3440;
+}
+
+.slider-button:active {
+    background: rgba(252, 252, 252, 0.5);
+    border: none;
+    padding: 2px;
+}
+
+.slider-button:active .slider-icon{
+    fill: #2D3440;
+}
+
+.slider-button:disabled .slider-icon {
+    background: rgba(252, 252, 252, 0.3);
+    opacity: 0.4;
+    border: 2px solid #FCFCFC;
+    border-radius: 26px;
 }
 
 .substrate::before {
@@ -467,7 +531,37 @@ body {
     margin-right: 8px;
 }
 
+.slider-pagination-button {
+    width: 12px;
+    height: 12px;
+    border-radius: 100px;
+    background: rgba(252, 252, 252, 0.3);
+    border: none;
+    cursor: pointer;
+}
 
+.slider-pagination-button-current {
+    background-color: #FCFCFC;
+}
+
+.slider-pagination-button:hover {
+    background: rgba(252, 252, 252, 0.3);
+    border: 1px solid #FCFCFC;
+    border-radius: 100px;
+    outline: none;
+    padding: 0;
+}
+.slider-pagination-button:focus {
+    background: rgba(252, 252, 252, 0.3);
+    border: 1px solid #2D3440;
+    border-radius: 100px;
+    outline: none;
+    padding: 0;
+}
+
+.slider-pagination-button:active {
+    background: rgba(252, 252, 252, 0.5);
+}
 
 .social-list {
     display: flex;
@@ -648,24 +742,33 @@ body {
 
 .add-to-cart-link:hover .add-to-cart-icon {
     background: rgba(252, 252, 252, 0.3);
-    box-shadow: inset 0 0 0 2px #FF2F64;
+    border: 2px solid #FF2F64;
     border-radius: 26px;
     fill: #2D3440;
+    outline: none;
+    padding: 6px 7px;
+    
 }
 
 .add-to-cart-link:focus .add-to-cart-icon {
     background: #FF2F64;
-    box-shadow: inset 0 0 0 2px #FF2F64;
+    border: 2px solid #2D3440;
     border-radius: 26px;
     outline: none;
     fill: #FCFCFC;
+    padding: 6px 7px;
+}
+
+.add-to-cart-link:focus {
+    outline: none;
 }
 
 .add-to-cart-link:active .add-to-cart-icon {
     background: #FFCBD8;
-    box-shadow: inset 0 0 0 2px #FF2F64;
+    border: 2px solid #FF2F64;
     border-radius: 26px;
     fill: #2D3440;
+    
 }
 .add-to-cart-link:disabled .add-to-cart-icon {
     background: #B9B9B9;
@@ -875,6 +978,7 @@ body {
     margin-top: 80px;
     justify-content: space-between;
     padding-right: 64px;
+    border-radius: 16px;
 }
 
 .delivery-info-container {
@@ -967,6 +1071,7 @@ body {
     height: 492px;
     margin-top: 80px;
     padding-left: 104px;
+    border-radius: 16px;
 }
 
 .contacts-container {
@@ -1117,17 +1222,21 @@ body {
 
 /*Страница каталога*/
 
-.main-inner{
-    padding-top: 32px;
+
+.inner-header-title {
+    margin-top: 0;
 }
 
 .breadcrumbs {
     display: flex;
     list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
 
 .breadcrumbs-item {
-    padding-right: 24px;
+    position: relative;
+    margin-right: 28px;
 }
 
 .breadcrumbs-link {
@@ -1138,13 +1247,34 @@ body {
     text-decoration: none;
 }
 
+.decoration {
+    border-bottom: 1px solid #2D3440;
+}
+
+.breadcrumbs-item::after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 8px;
+    right: -20px;
+    background-image: url(../image/icons/twoo_arrows.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 12px;
+    height: 12px;
+}
+
+.breadcrumbs-item:last-child::after {
+    content: none;
+  }  
+
 /*Фильтрация*/
 
 .filter {
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 196px 196px 383px;
+    gap: 16px 24px;
     width: 823px;
-    flex-wrap: wrap;
     margin: 0;
     padding: 0;
 }
@@ -1163,6 +1293,7 @@ body {
     font-weight: 400;
     font-size: 14px;
     line-height: 20px;
+    margin-top: 0;
     margin-bottom: 8px;
 }
 
@@ -1180,7 +1311,6 @@ body {
 }
 
 .fat-list {
-    display: flex;
     font-weight: 400;
     font-size: 14px;
     line-height: 20px;
@@ -1189,12 +1319,17 @@ body {
     padding: 0;
 }
 
-.filter-option {
-    margin-right: 24px;
+.fat-list-container {
+    display: flex;
+    width: 383px;
+    background: rgba(252, 252, 252, 0.3);
+border-radius: 18px;
 }
+
 
 .filler-list {
-    display: flex;
+   /* grid-column: 2 / 3;*/
+    grid-row: 2 / 3;
     font-weight: 400;
     font-size: 14px;
     line-height: 20px;
@@ -1203,6 +1338,12 @@ body {
     padding: 0;
 }
 
+.filler {
+    display: flex;
+    width: 604px;
+    background: rgba(252, 252, 252, 0.3);
+    border-radius: 18px;
+}
 
 .filler-item {
     font-weight: 400;
@@ -1210,17 +1351,54 @@ body {
     line-height: 20px;
 }
 
+.button-accepted {
+    grid-column: 3 / 3;
+    justify-self: end;
+    align-self: flex-end;
+    height: min-content;
+    padding: 8px 52px;
+}
+
+.button-accepted:hover {
+    background: #FCFCFC;
+    border: 2px solid rgba(252, 252, 252, 0.3);
+    border-radius: 20px;
+    padding: 10px 54px;
+}
+
+
+.button-accepted:focus {
+    background: rgba(252, 252, 252, 0.3);
+    border: 2px solid #2D3440;
+    border-radius: 20px;
+    padding: 11px 55px;
+}
+
+.button-accepted:active {
+    background: rgba(252, 252, 252, 0.5);
+    border-radius: 20px;
+    padding: 10px 54px;
+}
+
+.button-accepted:disabled {
+    background: rgba(252, 252, 252, 0.3);
+    opacity: 0.4;
+    border: 2px solid #FCFCFC;
+    border-radius: 20px;
+    padding: 8px 52px;
+}
+
 /*Каталог*/
 
 .catalog {
-    margin-top: 44px;
+    margin-top: 95px;
+    margin-bottom: 16px;
 }
-
 
 .catalog-list {
     display: grid;
     grid-template-columns: repeat(4 , 270px);
-    gap: 30px;
+    gap: 91px 30px;
     margin: 0;
     padding: 0; 
 }
@@ -1234,7 +1412,7 @@ body {
 }
 
 .catalog-item-title {
-    margin-top: -65px;
+    margin-top: -52px;
     font-weight: 700;
     font-size: 20px;
     line-height: 24px;
@@ -1254,60 +1432,151 @@ body {
 .catalog-card-content{
     margin: 0;
     padding: 0;
-    padding: 16px 40px 24px;
+    padding-left: 40px;
+    padding-bottom: 28px;
+    padding-right: 40px;
     background-color: #FCFCFC;
     border-radius: 8px;
 }
 
 .catalog-item-image {
-    position: relative;
-    bottom: 60px;
-    left: 10px;
-  }
+  position: relative;
+  bottom: 60px;
+  left: 10px;
+  filter: drop-shadow(0px 4px 12px rgba(45, 52, 64, 0.1));
+}
 
 .catalog-footer {
     display: flex;
     justify-content: space-between;
     flex-direction: row;
+    width: 190px;
+    margin: 0;
 }
 
 .price {
+    display: block;
     font-weight: 700;
     font-size: 20px;
     line-height: 24px;
+    align-self: center;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    margin: 3px;
 }
 /*Пагинация*/
 
 .pagination-container {
-    display: grid;
-    grid-template-columns: 152px 179px 168px;
-    column-gap: 335px;
+    display: flex;
+    width: 1170px;
 }
 
-.pagination {
+
+.pagination-show-more { 
+    margin-left: 514px;
+    margin-top: 41px;
+    margin-bottom: 41px;
+    cursor: pointer;
+} 
+
+.pagination-show-more:hover {
+    background: rgba(252, 252, 252, 0.4);
+    border: 4px solid #FCFCFC;
+    box-shadow: 0px 4px 15px rgba(133, 133, 133, 0.15);
+    border-radius: 26px;
+    outline: none;
+    
+}
+
+.pagination-show-more:focus {
+    background: rgba(252, 252, 252, 0.5);
+    border: 2px solid #2D3440;
+    box-shadow: 0px 4px 12px rgba(45, 52, 64, 0.1);
+    border-radius: 26px;
+    outline: none;
+    margin-left: 514px;
+    margin-top: 41px;
+    margin-bottom: 41px;
+    padding: 14px 34px;
+}
+
+.pagination-show-more:active {
+    background: #FCFCFC;
+    border: 2px solid #2D3440;
+    box-shadow: 0px 4px 12px rgba(45, 52, 64, 0.1);
+    border-radius: 26px;
+    outline: none;
+    margin-left: 514px;
+    margin-top: 41px;
+    margin-bottom: 41px;
+    padding: 14px 34px;
+}
+.pagination-show-more:disabled {
+    background: #E7E7E7;
+    border: 4px solid rgba(252, 252, 252, 0.4);
+    border-radius: 26px;
+}
+
+
+.pagination-list {
     display: flex;
     margin: 0;
     padding: 0;
     list-style-type: none;
+    margin-left: auto;
 }
 
 .pagination-item {
-    margin-top: 41px;
-    margin-bottom: 41px;
-    padding-right: 15px;
+    margin-top: 51px;
+    margin-bottom: 51px;
 }
+
 
 .pagination-link {
     font-weight: 400;
     line-height: 20px;
     color: #2D3440;
     text-decoration: none;
-
+    padding: 2px 8px;
 }
 
-.pagination-show-more {
-    grid-column: 2 / 2;
-    margin-top: 41px;
-    margin-bottom: 41px;
+
+.pagination-prev {
+    margin-right: 1px;
 }
 
+.pagination-next {
+    margin-left: 1px;
+}
+
+.pagination-disabled {
+    opacity: 0.3;
+}
+
+.pagination-current {
+    background: #FCFCFC;
+    border-radius: 50px;
+    padding: 2px 6px;
+}
+
+.pagination-link:hover {
+    background: rgba(252, 252, 252, 0.5);
+    border-radius: 50px;
+    outline: none;
+}
+
+.pagination-link:focus {
+    background: rgba(252, 252, 252, 0.3);
+    border: 1px solid #2D3440;
+    border-radius: 50px;
+    outline: none;
+    padding: 1px 7px;
+}
+
+.pagination-link:active {
+    background: rgba(252, 252, 252, 0.5);
+    border: 1px solid #FCFCFC;
+    border-radius: 50px;
+    outline: none;
+    padding: 1px 7px;
+}
